Speed up display of mails with many attachments, by introducing a cache in the code that maps the mimetype to an icon name. The icon name was often not found, like for image_jpeg, and that was slow.

According to the bug report, this improves message display from 20 to 3 seconds in some
cases.

Thanks to Martin for finding the reason for the speed problem.

BUG: 189961
BUG: 191666

svn path=/trunk/KDE/kdepim/; revision=984088