kmmsgpart.cpp
@@ -5,6 +5,7 @@
 #include "kmmessage.h"
 #include "globalsettings.h"
 #include "stringutil.h"
+#include "iconnamecache.h"
 
 #include <kmime/kmime_charfreq.h>
 #include <kmime/kmime_codecs.h>
@@ -16,7 +17,6 @@
 #include <kdebug.h>
 #include <kcodecs.h>
 #include <kascii.h>
-#include <kiconloader.h>
 
 #include <QTextCodec>
 #include <QList>
@@ -304,7 +304,6 @@ void KMMessagePart::magicSetType(bool aAutoDecode)
   mSubtype = mimetype.mid(sep+1).toLatin1();
 }
 
-
 //-----------------------------------------------------------------------------
 QString KMMessagePart::iconName( int size ) const
 {
@@ -329,11 +328,8 @@ QString KMMessagePart::iconName( int size ) const
     }
   }
 
-  fileName =
-    KIconLoader::global()->iconPath( fileName, size );
-  return fileName;
+  return IconNameCache::instance()->iconPath( fileName, size );
 }
-
 
 //-----------------------------------------------------------------------------
 int KMMessagePart::type() const {
